# Federated_Learning_Practice_Project_EN

./: .gitignore  Dockerfile  docker-compose.yaml  docker-compose.yml  docker-flwr.txt  docker-python-3-11.txt  docker_python3-11.txt  docker_python3-11_requirements.txt  python3-11_docker.txt  python3-11_docker_requirements.txt  requirements_venv-python3-11.txt  requirements_venv-python3-11.yml  venv-python3-11.txt  venv-python3-11_requirements.txt  venv-python3-11_requirements.yml
CIFAR-10/: CIFAR-10 LeNet.ipynb  CIFAR-10 ResNet-18.ipynb  CIFAR-10.ipynb  ResNet-18 copie.ipynb
Federated Averaging (FedAvg)/: Dockerfile.aggregator  Dockerfile.collaborator
Federated Averaging (FedAvg)/CIFAR-10/: docker-compose.yml  pyproject.toml
Federated Averaging (FedAvg)/CIFAR-10/app_pytorch/: client_app.py  server_app.py  task.py
Federated Averaging (FedAvg)/MNIST/: Dockerfile-Aggregator  Dockerfile.aggregator  Dockerfile.collaborator  compose.yml  docker compose commands.rtf  docker-compose.yml  dockerfile-clientapp  dockerfile-serverapp  pyproject.toml
Federated Averaging (FedAvg)/MNIST/pytorch_lightning_scripts/: __init__.py  client_app.py  server_app.py  task.py
Federated Averaging (FedAvg)/MNIST/pytorch_scripts/: __init__.py  client_app.py  server_app.py  task.py
Federated Averaging (FedAvg)/MNIST/pytorch_scripts/app_pytorch/: task.py
Federated Averaging (FedAvg)/Méthode de type OpenFL/: Dockerfile.aggregator  docker-python-3-11.txt
Federated One-vs-All (FedOVA)/: MNIST - FedOVA.ipynb
MNIST/: MNIST Example.ipynb
MNIST Dataset/: docker-compose.yml
MNIST Dataset/Méthode de type OpenFL/: Dockerfile.collaborator  docker-compose.yml  requirements-docker-python-3-11.txt
MNIST Example/: MNIST Example.ipynb
MNIST/Méthode de type OpenFL/: Dockerfile  Dockerfile.mnist  Dockerfile.mnist_aggregator  dataset.py
Méthode MapReduce/Ensemble de données MNIST/: MapReduce - MNIST.ipynb
Méthode de type OpenFL/: Dockerfile.aggregator
