[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "app-pytorch"
version = "1.0.0"
description = "Federated Learning on the CIFAR-10 Database with PyTorch and Flower"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.17.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.5.1",
    "torchvision==0.20.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"

[tool.flwr.app.components]
serverapp = "app_pytorch.server_app:app"
clientapp = "app_pytorch.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 5
fraction-sample = 0.5
local-epochs = 1

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 5

[tool.flwr.federations.local-simulation-gpu]
options.num-supernodes = 5
options.backend.client-resources.num-cpus = 2 # each ClientApp assumes to use 2 CPUs
options.backend.client-resources.num-gpus = 0.2 # at most 5 ClientApp will run in a given GPU

[tool.flwr.federations.local-deployment]
address = "127.0.0.1:9093"
insecure = true